discover: the fix for the misaligned layout leaves discover in single column at too wide when it should be 2 apps side by side.

--- a/src/scss/components/account-view/account-view.component.scss
+++ b/src/scss/components/account-view/account-view.component.scss
@@ -38,6 +38,12 @@
   }
 }
 
+@media (max-width: v.$layout-break-2) {
+  .wrapper > div {
+    grid-template-columns: minmax(500px, 35%) minmax(auto, 1792px);
+  }
+}
+
 @media (max-width: v.$layout-break-4) {
   .wrapper > div {
     display: grid;
