--- a/src/scss/components/account-view/cards/nfts.component.scss
+++ b/src/scss/components/account-view/cards/nfts.component.scss
@@ -349,28 +349,24 @@ $box-shadow: 0px 4px 6px #3332;
     }
   }
 }
-
-
-@media (max-width: v.$layout-break-2) {
-  .nfts {
-    & .discover {
-      width: calc(100% - 4rem);
-    }
-  }
-}
-
+// @media (max-width: v.$layout-break-2) {
+//   .nfts {
+//     & .discover {
+//       width: calc(100% - 4rem);
+//     }
+//   }
+// }
 @media (max-width: v.$layout-break-4) {
+
   :host {
     grid-row: unset;
   }
-}
 
-@media (max-width: v.$layout-break-4) {
   .nfts {
     flex-direction: row;
 
     & .discover {
-      width: calc(50% - 6rem);
+      width: calc(50% - 5rem);
     }
   }
 }
